tests/error/template_non.gw
// [contains] template call of non-template function
 function void my_func(){}
my_func<{int}>();
